fixed margin overflow issue

--- a/src/scss/layout/_profile-card.scss
+++ b/src/scss/layout/_profile-card.scss
@@ -1,6 +1,6 @@
 .box-preview {
   @include tablet() {
-    width: fit-content;
+    width: 100%;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -22,7 +22,9 @@
     align-items: center;
   }
   @include desktop() {
-    width: 80vw;
+    // width: 80vw;
+    width: 100%;
+
     padding: 173px 0 260px 0;
   }
 }
